--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ div{
 	border: 1px solid rebeccapurple;
 	margin-top: 40vh;
 	box-sizing: border-box;
-	background-color: cadetblue;
+	background-color: springgreen;
 	color: lightblue;
 	content: "";
 	height: 200px;
